--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~51.0.8",
     "expo-image-picker": "^15.0.5",
     "expo-location": "^17.0.1",
@@ -21,13 +23,18 @@
     "formik": "^2.4.6",
     "intl": "^1.2.5",
     "luxon": "^3.4.4",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-animated-pagination-dot": "^0.4.0",
     "react-native-elements": "^3.4.3",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.14.0",
     "react-native-open-maps": "^0.4.3",
+    "react-native-reanimated": "^3.10.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-screens": "^3.31.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-toast-message": "^2.2.0",
