--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "5-tenedores",
-    "slug": "5-tenedores",
+    "name": "SC",
+    "slug": "SC",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
