--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@react-native-firebase/firestore": "^20.0.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -36,7 +37,6 @@
     "react-native-reanimated": "^3.10.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-screens": "^3.31.1",
-    "react-native-snap-carousel": "^3.9.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
     "uuid": "^9.0.1",
