--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/firestore": "^20.0.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -28,23 +29,29 @@
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-dom": "18.2.0",
+    "react-native": "^0.74.2",
     "react-native-animated-pagination-dot": "^0.4.0",
+    "react-native-config": "^1.5.1",
     "react-native-elements": "^3.4.3",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.14.0",
     "react-native-open-maps": "^0.4.3",
-    "react-native-reanimated": "^3.10.0",
+    "react-native-reanimated": "^3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-screens": "^3.31.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "~0.19.10",
     "uuid": "^9.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-private-methods": "^7.24.7",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
