--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "sc",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
+ 
+   
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -12,6 +14,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/firestore": "^20.0.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
